Networking is now Via UDPPackages

--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+		compile project(":de.riedelgames.core.networking")
     }
 }
 
